--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
         <div id="post">
             <h1>Este es el título atractivo</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar cosas increibles que se pueden hacer con ramas</p>
+            <p>Se crea un parrafo adicional para poder hacer merge con la rama cabecera. Además se cambia
+                la fuente de arial a courier
+            </p>
         </div>
     </div>
 </body>
